--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path></svg></div>
     </header>
 
-    <main>
+    <!-- <main>
         <section class="contenedor sobre-nosotros">
             <h2 class="titulo">Nuestro producto</h2>
             <div class="contenedor-sobre-nosotros">
@@ -159,9 +159,9 @@
                 </div>
             </div>
         </section>
-    </main>
+    </main> -->
 
-    <footer>
+    <!-- <footer>
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>Phone</h4>
@@ -177,6 +177,6 @@
             </div>
         </div>
         <h2 class="titulo-final">&copy; AlexCG Design | Mariam Levy</h2>
-    </footer>
+    </footer> -->
 </body>
 </html>
