Descomente la seccion Main y le aplique estilos css

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <h1>Potencia sus ventas al menos un 200%</h1>
             <h2>Con una pagina web potente</h2>
         </section>
-        <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path></svg></div>
+        <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
     </header>
 
-    <!-- <main>
+    <main>
         <section class="contenedor sobre-nosotros">
             <h2 class="titulo">Nuestro producto</h2>
             <div class="contenedor-sobre-nosotros">
@@ -43,6 +43,7 @@
             <div class="contenedor">
                 <h2 class="titulo">Portafolio</h2>
                 <div class="galeria-port">
+
                     <div class="imagen-port">
                         <img src="./img/img1.jpg" alt="">
                         <div class="hover-galeria">
@@ -50,8 +51,6 @@
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
-                </div>
-                <div class="galeria-port">
                     <div class="imagen-port">
                         <img src="./img/img2.jpg" alt="">
                         <div class="hover-galeria">
@@ -59,8 +58,7 @@
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
-                </div>
-                <div class="galeria-port">
+
                     <div class="imagen-port">
                         <img src="./img/img3.jpg" alt="">
                         <div class="hover-galeria">
@@ -68,8 +66,7 @@
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
-                </div>
-                <div class="galeria-port">
+
                     <div class="imagen-port">
                         <img src="./img/img4.jpg" alt="">
                         <div class="hover-galeria">
@@ -77,8 +74,7 @@
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
-                </div>
-                <div class="galeria-port">
+
                     <div class="imagen-port">
                         <img src="./img/img5.jpg" alt="">
                         <div class="hover-galeria">
@@ -86,8 +82,7 @@
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
-                </div>
-                <div class="galeria-port">
+
                     <div class="imagen-port">
                         <img src="./img/img6.jpg" alt="">
                         <div class="hover-galeria">
@@ -95,8 +90,7 @@
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
-                </div>
-                <div class="galeria-port">
+
                     <div class="imagen-port">
                         <img src="./img/img7.jpg" alt="">
                         <div class="hover-galeria">
@@ -104,8 +98,7 @@
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
-                </div>
-                <div class="galeria-port">
+
                     <div class="imagen-port">
                         <img src="./img/img8.jpg" alt="">
                         <div class="hover-galeria">
@@ -159,7 +152,7 @@
                 </div>
             </div>
         </section>
-    </main> -->
+    </main>
 
     <!-- <footer>
         <div class="contenedor-footer">
