Culminacion del main con css

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </section>
     </main>
 
-    <!-- <footer>
+    <footer>
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>Phone</h4>
@@ -170,6 +170,6 @@
             </div>
         </div>
         <h2 class="titulo-final">&copy; AlexCG Design | Mariam Levy</h2>
-    </footer> -->
+    </footer>
 </body>
 </html>
