Finalizacion del footer y comienzo del responsive

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <p>8296312</p>
             </div>
         </div>
-        <h2 class="titulo-final">&copy; AlexCG Design | Mariam Levy</h2>
+        <h2 class="titulo-final">&copy; LevyMJ Design | Mariam Levy</h2>
     </footer>
 </body>
 </html>
