--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pagina Web</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./img/alexcgdesign.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/email.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
